Fix item box wrapping when browser window shrinks

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ ul {
     align-items: center;
     margin: 0;
     padding: 30px 300px 30px 300px;
+    
 }
 
 .intro {
@@ -44,6 +45,7 @@ ul {
     margin: 0;
     padding: 100px 300px 100px 300px;
     gap: 100px;
+    
 }
 
 .main-title {
@@ -115,6 +117,7 @@ ul {
 .random {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     margin: 0;
     gap: 60px;
     padding-bottom: 100px;
